--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -108,7 +108,7 @@
           <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
         </label>
         <div class="name-wrapper position-relative">
-          <input newDataFormatName type="text" class="form-control" id="name" placeholder="Untitled DataFormat"
+          <input newDataFormatName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled DataFormat"
             formControlName="name" odpAutoFocus (keyup.enter)="triggerDataFormatCreate()"
             [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
           <ng-container *ngIf="form.get('name').dirty">
