--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -150,7 +150,7 @@
           <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
         </label>
         <div class="name-wrapper position-relative">
-          <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
+          <input newFaasName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled Function"
             formControlName="name" odpAutoFocus
             [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
           <ng-container *ngIf="form.get('name').dirty">
