--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -203,7 +203,7 @@
         <sup class="text-danger font-normal high-zIndex sup-top" ngbTooltip="Mandatory field">*</sup>
       </label>
       <div class="name-wrapper position-relative">
-        <input newServiceName type="text" class="form-control" id="name" placeholder="Untitled Service"
+        <input newServiceName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled Service"
           formControlName="name" odpAutoFocus (keyup.enter)="triggerServiceCreate()" [ngClass]="{
             'is-invalid': form.get('name').invalid && form.get('name').dirty
           }" />
@@ -261,7 +261,7 @@
           <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
         </label>
         <div class="name-wrapper position-relative">
-          <input cloneServiceName type="text" class="form-control" id="name" placeholder="Untitled Service"
+          <input cloneServiceName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled Service"
             formControlName="name" odpAutoFocus [ngClass]="{
               'is-invalid': form.get('name').invalid && form.get('name').dirty
             }" />
