--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="d-flex align-items-stretch h-100 w-100">
-            <div class="editor-wrapper h-100 p-3">
+            <div class="editor-wrapper p-3">
                 <odp-code-editor *ngIf="showCodeEditor" class="code-editor" [edit]="edit" [theme]="selectedEditorTheme"
                     [fontSize]="selectedFontSize" [(code)]="faasData.code"></odp-code-editor>
             </div>
