--- a/src/app/home/schema-utils/configuration/connector-settings/connector-settings.component.html
+++ b/src/app/home/schema-utils/configuration/connector-settings/connector-settings.component.html
@@ -1,16 +1,25 @@
 <div class="wrapper d-flex flex-column w-100 p-4 ">
-  <div class="d-flex justify-content-between mt-4" *ngIf="canView('S')">
-    <div class="d-flex flex-column">
-      <label class="font-14 fw-700 text-secondary" for="category">Data Connector</label>
+  <span class="font-20 fw-600 mb-3">Connector Settings</span>
+  <div class="my-3">
+    <div class="custom-alert d-flex align-items-center p-4 rounded">
+        <span class="dsi dsi-danger-circle text-danger"></span>
+        <span class="ml-3 text-dark font-12 fw-400">"Changing the connectors would lead to potential data loss. Unless you
+          are fully aware of what you are doing, it is highly recommended that you don't change the connectors"</span>
     </div>
+</div>
+  <span class="font-14 fw-700 my-2">Data Connector</span>
+  <div class="d-flex justify-content-between" *ngIf="canView('S')">
     <div class="d-flex flex-column">
+      <label class="sub-heading font-14 fw-400" for="category">Connector</label>
+    </div>
+    <div class="d-flex">
       <ng-container>
         <div class="form-group">
 
           <select id="data" class="form-control" (change)="selectConnector($event,'data')"
             [disabled]="!edit.status || !canEdit('S')">
             <option [value]="connector._id" *ngFor="let connector of dataConnectors"
-              [selected]="checkDefault(connector._id)">{{connector.name}}</option>
+              [selected]="checkDefault(connector._id)" #cc>{{connector.name}}</option>
           </select>
         </div>
       </ng-container>
@@ -18,9 +27,17 @@
 
     </div>
   </div>
-  <div class="d-flex justify-content-between mt-4" *ngIf="canView('S') && showConnectors">
+  <div class="d-flex justify-content-between" *ngIf="canView('S')">
     <div class="d-flex flex-column">
-      <label class="font-14 fw-700 text-secondary" for="category">File Connector</label>
+      <div class="sub-heading font-14 fw-400">type</div>
+    </div>
+     {{selectedType['data']}}
+  </div>
+  <br>
+  <span class="font-14 fw-700 my-2">File Connector</span>
+  <div class="d-flex justify-content-between" *ngIf="canView('S') && showConnectors">
+    <div class="d-flex flex-column">
+      <label class="sub-heading font-14 fw-400" for="category">Connector</label>
     </div>
     <div class="d-flex flex-column">
       <ng-container>
@@ -34,6 +51,14 @@
           </select>
         </div>
       </ng-container>
+    </div>
+  </div>
+  <div class="d-flex justify-content-between" *ngIf="canView('S')">
+    <div class="d-flex flex-column">
+      <div class="sub-heading font-14 fw-400">type</div>
+    </div>
+    <div>
+      {{selectedType['file']}}
     </div>
   </div>
 </div>
