--- a/src/app/home/agents/agents-log/agents-log.component.html
+++ b/src/app/home/agents/agents-log/agents-log.component.html
@@ -87,12 +87,12 @@
                         <span class="fw-500 text-dark">{{agentDetails._metadata.version.document}} </span>
                     </div>
                     <div class="d-flex flex-column mr-4">
-                        <label class="font-12 text-secondary">Ip Address</label>
-                        <span class="fw-500 text-dark">{{agentDetails.type}}</span>
+                        <label class="font-12 text-secondary">IP Address</label>
+                        <span class="fw-500 text-dark">{{agentLogObject[0].ipAddress}}</span>
                     </div>
                     <div class="d-flex flex-column mr-4">
                         <label class="font-12 text-secondary">Mac Address</label>
-                        <span class="fw-500 text-dark">{{agentDetails.type}}</span>
+                        <span class="fw-500 text-dark">{{agentLogObject[0].macAddress}}</span>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                     <ng-container *ngFor="let agent of agentLogObject;let i=index">
                         <div class="list-group-item">
                             <div class="d-flex align-items-center justify-content-start h-100">
-                                <div class="item-timestamp text-truncate fw-500">{{agent.timestamp}}</div>
+                                <div class="item-timestamp text-truncate fw-500">{{convertDate(agent.timestamp )}}</div>
                                 <div class="item-level">{{agent.level}}</div>
                                 <div class="item-message">{{agent.content}}</div>
                             </div>
@@ -303,15 +303,15 @@
         <div class="form-group position-relative agent-config-wrapper w-100">
             <div class="d-flex align-items-center justify-content-between mt-2">
                 <label class="font-14 text-dark mr-2">Encrypt file</label>
-                <odp-switch [(checked)]="agentDetails.encryptFile" [edit]="{status:true}"></odp-switch>
+                <odp-switch [checked]="agentDetails?.encryptFile" [edit]="{status:true}"></odp-switch>
             </div>
             <div class="d-flex align-items-center justify-content-between mt-2">
                 <label class="font-14 text-dark mr-2">Retain file on success</label>
-                <odp-switch [(checked)]="agentDetails.retainFileOnSuccess" [edit]="{status:true}"></odp-switch>
+                <odp-switch [checked]="agentDetails?.retainFileOnSuccess" [edit]="{status:true}"></odp-switch>
             </div>
             <div class="d-flex align-items-center justify-content-between mt-2">
                 <label class="font-14 text-dark mr-2">Retain file on error</label>
-                <odp-switch [(checked)]="agentDetails.retainFileOnError" [edit]="{status:true}"></odp-switch>
+                <odp-switch [checked]="agentDetails?.retainFileOnError" [edit]="{status:true}"></odp-switch>
             </div>
         </div>
         <div class="d-flex w-100 mt-auto">
