DEF2391 and DEF2392 fix

--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -23,7 +23,7 @@
         <span class="dsi dsi-upload text-secondary"></span>
       </button>
       <button type="button" id="addNewDS" class="add-new btn btn-primary ml-3 d-flex align-items-center"
-        (click)="newService()" *ngIf="hasCreatePermission('SM')">
+        (click)="newService()" *ngIf="hasCreatePermission('SM') && hasCreatePermission('CON')">
         <span class="dsi dsi-plus mr-2"></span>
         <span class="text">New</span>
       </button>
@@ -203,8 +203,9 @@
         <sup class="text-danger font-normal high-zIndex sup-top" ngbTooltip="Mandatory field">*</sup>
       </label>
       <div class="name-wrapper position-relative">
-        <input newServiceName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled Service"
-          formControlName="name" odpAutoFocus (keyup.enter)="triggerServiceCreate()" [ngClass]="{
+        <input newServiceName autocomplete="off" type="text" class="form-control" id="name"
+          placeholder="Untitled Service" formControlName="name" odpAutoFocus (keyup.enter)="triggerServiceCreate()"
+          [ngClass]="{
             'is-invalid': form.get('name').invalid && form.get('name').dirty
           }" />
         <ng-container *ngIf="form.get('name').dirty">
@@ -261,8 +262,8 @@
           <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
         </label>
         <div class="name-wrapper position-relative">
-          <input cloneServiceName autocomplete="off" type="text" class="form-control" id="name" placeholder="Untitled Service"
-            formControlName="name" odpAutoFocus [ngClass]="{
+          <input cloneServiceName autocomplete="off" type="text" class="form-control" id="name"
+            placeholder="Untitled Service" formControlName="name" odpAutoFocus [ngClass]="{
               'is-invalid': form.get('name').invalid && form.get('name').dirty
             }" />
           <ng-container *ngIf="form.get('name').dirty">
